--- a/_content.qmd
+++ b/_content.qmd
@@ -1,18 +1,20 @@
 ## Games in Research
 
-- (Re) Introducing Stephen Thompson
-- Work to date - a serious game to study key hole surgery. 
-- Opportunities to participate:
-  - A literature review on game development in research. 
-  - Upcoming project - Exergaming: a serious game for dizziness disorder rehabilitation [#1137](https://github.com/UCL-ARC/arc-opportunities-tracker/issues/1137).
+-   (Re) Introducing Stephen Thompson
+-   Work to date - a serious game to study key hole surgery.
+-   Opportunities to participate:
+    -   A literature review on game development in research.
+    -   Upcoming project - Exergaming: a serious game for dizziness disorder rehabilitation [#1137](https://github.com/UCL-ARC/arc-opportunities-tracker/issues/1137).
 
 ## 🏛️ Introducing Stephen
 
-- Senior Research Software Engineer Since October 2023
+-   Senior Research Software Engineer Since October 2023
 
-- Background in augmented reality for keyhole surgery.
-- informus, teaching, EMAP, sense etc.
-- Interested in how people collaborate with intelligent machines. 
+-   Background in augmented reality for keyhole surgery.
+
+-   informus, teaching, EMAP, sense etc.
+
+-   Interested in how people collaborate with intelligent machines.
 
 ## 🏛️ Introducing Stephen With Scratch
 
@@ -20,14 +22,26 @@
 <iframe src="https://scratch.mit.edu/projects/958976130/embed" allowtransparency="true" width="100%" height="100%" frameborder="0" scrolling="no" allowfullscreen></iframe>
 ```
 
-## Some Human Interest Pictures
+## Some Human Interest - My Summer 👎
 
-A white tailed sea eagle. Something on the water. Cricket. Bicycle.
+-   Usual summer; lots of water sports.
+
+    ![](images/clipboard-3335579666.gif){fig-alt="Video of me leaping out of the sea and landing upright on a paddle board - yes really." width="240"}
+
+<!-- -->
+
+-   This summer: 👨‍👨‍👧‍👦 🏥🦴🧑‍🔧🚗 = less time on the water.
+
+## Some Human Interest - My Summer 👍
+
+-   More time for [Cricket.](https://cwc.play-cricket.com/website/results/6805674 "My Cricket results on Play Cricket.")
+
+-   🦅![](images/sea-eagle.jpg "alt-fig="An indistinct photo of a white tailed eagle perched on a rock.""){width="240"}
 
 ## Beginning of Games for Teaching and Research
 
-- Developing and effective method to teach the statistics of point (fiducual) based registration (during covid lockdown).
-- Uses a game for formative assessment.
+-   Developing and effective method to teach the statistics of point (fiducual) based registration (during covid lockdown).
+-   Uses a game for formative assessment.
 
 [SciKit-Surgery F.R.E.D.](https://scikit-surgeryfred.ew.r.appspot.com/)
 
@@ -39,8 +53,7 @@ A white tailed sea eagle. Something on the water. Cricket. Bicycle.
 
 ## SciKit-Surgery F.R.E.D. Results
 
-![](images/scikit-surgeryfred.png){width=100% fig-alt="Column plot showing the game scores on from a cohort of 20 students. Students scored most highly when give the actual target registration error.}}
-
+![](images/scikit-surgeryfred.png){width=100% fig-alt="Column plot showing the game scores on from a cohort of 20 students. Students scored most highly when give the actual target registration error."}
 
 ## 2023 Blood Vessel Game
 
@@ -53,23 +66,23 @@ A white tailed sea eagle. Something on the water. Cricket. Bicycle.
 ## Publication - JMIR Serious Games
 
 ```{=html}
-<iframe width="100%" height="80%" src="https://games.jmir.org/2025/1/e56269/" title="Webpage example"></iframe>
+<iframe width="100%" height="80%" src="https://games.jmir.org/2025/1/e56269/" title="Publication in JMIR Serious Games"></iframe>
 ```
 
-Task performance time is linked to field of view.
-## With Self Citation
-
-```{=html}
-<iframe width="100%" height="60%" src="https://github.com/phaserjs/phaser/commit/32c82ef7283feb85eff71ab4f5298ff17fd8e3c4" title="Webpage example"></iframe>
+Task performance time is linked to field of view. With [Self Citation](https://github.com/phaserjs/phaser/commit/32c82ef7283feb85eff71ab4f5298ff17fd8e3c4 "Citing myself by contributing a citation.cff to an existing project.")
 ```
-
-<https://github.com/phaserjs/phaser/commit/32c82ef7283feb85eff71ab4f5298ff17fd8e3c4>
 
 ## 2024 Vessel Game
 
 ```{=html}
 <iframe width="100%" height="60%" src="https://vessel-game.ew.r.appspot.com/" title="The second blood vessel game"></iframe>
 ```
+
+## 2024 Vessel Game Results
+
+![](images/fov_vs_time.png){width=100% fig-alt="Scatter plot showing a reduction in task performance time as the field of view increases."}
+
+![](images/fov_vs_cursor_motion.png){width=100% fig-alt="Scatter plot showing a reduction in cursor movement as the field of view increases."}
 
 <https://github.com/SciKit-Surgery/vessel-game>
 
@@ -79,9 +92,17 @@ Task performance time is linked to field of view.
 <iframe width="100%" height="60%" src="https://vessel-game-project.vercel.app/" title="The third blood vessel game."></iframe>
 ```
 
+play locally instead of on the web firefox file:///home/thompson/software/Vessel-Game-Project/index.html
 <https://github.com/Ash2002-a/Vessel-Game-Project>
 
+## Distraction Results
+
+- Generally similar to past games but inconclusive.
+- Difficult to recruit surgeons. 
+- Opensource analysis tools - [streamlit](https://streamlit.io/cloud "The analysis tools hosted on streamlit")
+
 ## 2025 ARC Blog
+
 ```{=html}
 <iframe width="100%" src="https://blogs.ucl.ac.uk/research-software-development/using-serious-games-for-research-in-keyhole-surgery/" title="Blog on games for research in keyhole surgery."></iframe>
 ```
@@ -94,132 +115,115 @@ Task performance time is linked to field of view.
 
 ## 🧑💻 Professional expertise
 
-:::columns
-
-:::{.column width="33%"}
-
-::: {.callout-note .nonincremental .fragment icon=false }
+::::::::: columns
+:::: {.column width="33%"}
+::: {.callout-note .nonincremental .fragment icon="false"}
 ## Software engineering
-- Create efficient, reliable, reusable & sustainable code​
-- Mentor in good practices
+
+-   Create efficient, reliable, reusable & sustainable code​
+-   Mentor in good practices
 :::
+::::
 
-:::
-
-:::{.column width="33%"}
-
-::: {.callout-note .nonincremental .fragment icon=false }
+:::: {.column width="33%"}
+::: {.callout-note .nonincremental .fragment icon="false"}
 ## Data science
-- Derive insights from data​
-- Develop novel algorithms / tools​
-- Modelling & simulation
+
+-   Derive insights from data​
+-   Develop novel algorithms / tools​
+-   Modelling & simulation
 :::
+::::
 
-:::
-
-:::{.column width="33%"}
-
-::: {.callout-note .nonincremental .fragment icon=false }
+:::: {.column width="33%"}
+::: {.callout-note .nonincremental .fragment icon="false"}
 ## Data stewardship
-- Extracting long-term value from data
-- Data engineering & pipelines​
-- Publishing (FAIR) data
+
+-   Extracting long-term value from data
+-   Data engineering & pipelines​
+-   Publishing (FAIR) data
 :::
+::::
+:::::::::
 
-:::
-
-:::
-
-:::columns
-
-:::{.column width="50%"}
-
-::: {.callout-note .nonincremental .fragment icon=false }
+::::::: columns
+:::: {.column width="50%"}
+::: {.callout-note .nonincremental .fragment icon="false"}
 ## Infrastructure development
-- Design, build & maintain custom hardware & software infrastructure
-- Create performant, resilient systems​
+
+-   Design, build & maintain custom hardware & software infrastructure
+-   Create performant, resilient systems​
 :::
+::::
 
-:::
-
-:::{.column width="50%"}
-
-::: {.callout-note .nonincremental .fragment icon=false }
+:::: {.column width="50%"}
+::: {.callout-note .nonincremental .fragment icon="false"}
 ## Investment & strategy management
-- Supporting & directing research activities​
-- Delivery of large-scale projects
-:::
 
+-   Supporting & directing research activities​
+-   Delivery of large-scale projects
 :::
-
-:::
+::::
+:::::::
 
 ::: {.r-fit-text .fragment}
 More details at <https://www.ucl.ac.uk/arc/research-technology-professionals​>
-::: 
+:::
 
 ## 🧑‍🏫 Training and support
 
-:::columns
-
-::: {.column width="25%"}
-
-::: {.callout-tip .nonincremental .fragment icon=false }
+::::::::::: columns
+:::: {.column width="25%"}
+::: {.callout-tip .nonincremental .fragment icon="false"}
 ## MSc modules
-- RSE with Python
-- Research computing
-- Machine learning with big data
-- Engineering for data analysis
+
+-   RSE with Python
+-   Research computing
+-   Machine learning with big data
+-   Engineering for data analysis
 :::
+::::
 
-:::
-
-::: {.column width="25%"}
-
-::: {.callout-tip .nonincremental .fragment icon=false }
+:::: {.column width="25%"}
+::: {.callout-tip .nonincremental .fragment icon="false"}
 ## Training
-- Becoming a digital researcher
-- Improving research software
-- Using high performance computing
+
+-   Becoming a digital researcher
+-   Improving research software
+-   Using high performance computing
 :::
+::::
 
-:::
-
-::: {.column width="25%"}
-
-::: {.callout-tip .nonincremental .fragment icon=false }
+:::: {.column width="25%"}
+::: {.callout-tip .nonincremental .fragment icon="false"}
 ## Drop-in & support
-- In person and online drop-in sessions
-- Slack workspace for community discussion
-- Extensive online guides
+
+-   In person and online drop-in sessions
+-   Slack workspace for community discussion
+-   Extensive online guides
 :::
+::::
 
-:::
-
-::: {.column width="25%"}
-
-::: {.callout-tip .nonincremental .fragment icon=false }
+:::: {.column width="25%"}
+::: {.callout-tip .nonincremental .fragment icon="false"}
 ## Centre for Doctoral Training
-- Collaborative Computational Modelling at the Interface
-- Joint venture between UCL & Imperial
-- EPSRC funded
-:::
 
+-   Collaborative Computational Modelling at the Interface
+-   Joint venture between UCL & Imperial
+-   EPSRC funded
 :::
-
-:::
+::::
+:::::::::::
 
 ::: {.r-fit-text .fragment}
-More details at <https://www.ucl.ac.uk/arc/education​>  
+More details at <https://www.ucl.ac.uk/arc/education​>
 :::
 
 ## 🖥️ Platforms and services
 
-:::columns
-
-::: {.column .fragment width="50%"}
-
-__Research computing__
+::::::::::::::: columns
+:::::::: {.column .fragment width="50%"}
+**Research computing**
 
 ::: {.callout-note appearance="minimal"}
 Myriad (high throughput computing)
@@ -240,12 +244,10 @@ Aristotle, JupyterHub, RStudio (teaching)
 ::: {.callout-note appearance="minimal"}
 Trusted research environment
 :::
+::::::::
 
-:::
-
-::: {.column .fragment width="50%"}
-
-__Research data__
+:::::::: {.column .fragment width="50%"}
+**Research data**
 
 ::: {.callout-note appearance="minimal"}
 Research data storage (ongoing)
@@ -266,11 +268,9 @@ Electronic research notebook
 ::: {.callout-note appearance="minimal"}
 Harbour (external data)
 :::
-
-:::
-
-:::
+::::::::
+:::::::::::::::
 
 ::: {.r-fit-text .fragment}
-More details at <https://www.ucl.ac.uk/arc/platforms-and-services>  
+More details at <https://www.ucl.ac.uk/arc/platforms-and-services>
 :::
