--- a/_content.qmd
+++ b/_content.qmd
@@ -59,7 +59,7 @@
 
 ## SciKit-Surgery F.R.E.D.
 
-![](images/fitzpatrick.png "alt-fig="Image of 2009 conference paper by Fitzpatrick titled Fiducial registration error and target registration error are uncorrelated.""){width="640"}
+![](images/fitzpatrick.png "alt-fig="Image of 2009 conference paper by Fitzpatrick titled Fiducial registration error and target registration error are uncorrelated. TLDR - The results show that no estimate of accuracy for a given patient that is based on goodness of fiducial fit for that patients gives any information whatever about true registration accuracy for that patient, and surgeons should stop using such measures as indicators of registration quality for patients on whom they are about to operate,""){width="640"}
 
 -   2019 - [SciKit-Surgery F.R.E.D.](https://scikit-surgeryfred.ew.r.appspot.com/ "Scikit-Surgery FRED, web applicatin for teaching point based registration.")
 -   Developing an effective method to teach the statistics of point (fiducual) based registration (during covid lockdown).
